@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=201
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDA_OBJECT_COMMENTS
+Resource2=IDD_OBJECT_SECURITY
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_EDIT_IP_SUBNET
-Resource5=IDD_UPGRADE
+Resource4=IDD_REMOVE_TEMPLATE
+Resource5=IDD_GRAPH_PROP_STYLES
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_ADD_DCI
+Resource6=IDD_CREATE_MP
 Class11=CProgressDialog
-Resource7=IDD_IMPORT_CA_CERT
+Resource7=IDA_EVENT_EDITOR
 Class12=CAddrEntryDlg
-Resource8=IDD_THRESHOLD
+Resource8=IDD_CP_GENERAL
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_USER_PROPERTIES
+Resource20=IDD_EDIT_RULE_COMMENT
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_CHANGE_IP
+Resource22=IDD_OBJECT_COND_SCRIPT
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_DESKTOP_SAVE_AS
+Resource24=IDD_EDIT_IP_SUBNET
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDA_ALARM_BROWSER
+Resource27=IDM_VIEW_SPECIFIC
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_ABOUTBOX
-Resource32=IDD_DCI_DATA_EXPORT
+Resource31=IDD_NEW_USER
+Resource32=IDD_OBJTOOL_GENERAL
 Class29=CUserSelectDlg
-Resource33=IDD_OBJECT_CAPS
+Resource33=IDD_SET_PASSWORD
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_CREATE_NETSRV
-Resource36=IDD_OBJTOOL_COLUMNS
+Resource35=IDD_DCI_DATA_EXPORT
+Resource36=IDD_ADD_DCI
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDA_SCRIPT_MANAGER
+Resource38=IDD_OBJECT_CAPS
 Class33=CGroupPropDlg
-Resource39=IDD_CREATE_CONDITION
-Resource40=IDD_CREATE_MP
-Resource41=IDA_OBJECT_BROWSER
+Resource39=IDD_DISCOVERY_GENERAL
+Resource40=IDD_FATAL_ERROR
+Resource41=IDA_PACKAGE_MGR
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDD_CHANGE_PASSWORD
+Resource48=IDD_EDIT_RULE_SCRIPT
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_OBJECT_NETSRV_GENERAL
+Resource50=IDD_EDIT_VARIABLE
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDA_AGENT_CONFIG_MANAGER
+Resource52=IDD_OBJECT_GENERAL
 Class48=CObjectSelDlg
-Resource53=IDA_NETMAP
-Resource54=IDD_GROUP_PROPERTIES
+Resource53=IDA_AGENT_CFG_EDITOR
+Resource54=IDD_SELECT_EVENT
 Class49=CRuleCommentDlg
-Resource55=IDD_SELECT_AGENT_PARAM
+Resource55=IDD_GRAPH_PROP_DATA
 Class50=CEventSelDlg
-Resource56=IDD_CREATE_CONTAINER
+Resource56=IDD_SELECT_INTERNAL_ITEM
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_DCI_COLLECTION
+Resource58=IDD_EDIT_RULE_SEVERITY
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDA_ACTION_EDITOR
+Resource62=IDA_OBJECT_TOOLS_EDITOR
 Class52=CRuleSeverityDlg
-Resource63=IDA_CERT_MANAGER
+Resource63=IDD_SELECT_USER
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_DATA_QUERY
+Resource65=IDD_OBJECT_NODE_POLL
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_NEW_USER
-Resource70=IDD_EDIT_EVENT
+Resource69=IDD_SELECT_OBJECT
+Resource70=IDD_USER_PROPERTIES
 Class57=CNewActionDlg
-Resource71=IDD_OBJTOOL_OPTIONS
+Resource71=IDD_OBJECT_COND_GENERAL
 Class58=CEditActionDlg
-Resource72=IDD_CREATE_TG
+Resource72=IDD_CREATE_NETSRV
 Class59=CActionSelDlg
-Resource73=IDA_AGENT_CFG_EDITOR
+Resource73=IDD_ABOUTBOX
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_EDIT_RULE_SEVERITY
+Resource76=IDD_DCI_TRANSFORM
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_REMOVE_TEMPLATE
+Resource77=IDD_OBJECT_COND_DATA
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_DCI_THRESHOLDS
-Resource84=IDD_GRAPH_PROP_DATA
+Resource83=IDD_EDIT_RULE_ALARM
+Resource84=IDD_DCI_SCHEDULE
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDA_DC_EDITOR
-Resource86=IDD_SET_PASSWORD
+Resource85=IDD_EDIT_EVENT
+Resource86=IDD_OBJECT_PRESENTATION
 Class68=CTrapEditor
-Resource87=IDD_INPUT_BOX
-Resource88=IDD_DCI_TRANSFORM
-Resource89=IDD_OBJECT_STATUS
+Resource87=IDD_LASTVAL_PROP
+Resource88=IDD_INPUT_BOX
+Resource89=IDD_SUBMAP_BKGND
 Class69=CDataQueryDlg
-Resource90=IDA_EPP
+Resource90=IDM_CONTEXT
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_FATAL_ERROR
-Resource93=IDD_EDIT_TRAP_ARG
+Resource92=IDA_OBJECT_BROWSER
+Resource93=IDD_DESKTOP_SAVE_AS
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_GRAPH_PROP_STYLES
+Resource94=IDA_NETMAP
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDD_SNMP_WALK
+Resource98=IDD_COND_DCI_PROP
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_OBJECT_RELATIONS
+Resource129=IDD_OBJECT_VPNC_GENERAL
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,109 +270,109 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_OBJECT_CLUSTER_GENERAL
-Resource141=IDD_CREATE_VPNC
-Resource142=IDD_DCI_SCHEDULE
-Resource143=IDD_CP_GENERAL
-Resource144=IDD_ACTION_PROPERTIES
-Resource145=IDA_PACKAGE_MGR
-Resource146=IDD_DISCOVERY_GENERAL
-Resource147=IDM_VIEW_SPECIFIC
-Resource148=IDD_OBJECT_PRESENTATION
-Resource149=IDD_SAVE_AGENT_CFG
-Resource150=IDD_OBJECT_COND_GENERAL
-Resource151=IDD_EDIT_RULE_SCRIPT
-Resource152=IDA_GRAPH
-Resource153=IDM_CONTEXT
-Resource154=IDD_CLUSTER_RESOURCE
-Resource155=IDD_SELECT_MP
-Resource156=IDD_OBJTOOL_GENERAL
-Resource157=IDD_OBJECT_CLUSTER_RESOURCES
-Resource158=IDD_REQUEST_PROCESSING
-Resource159=IDD_SET_CHILD_MGMT_STATUS
-Resource160=IDD_NEW_OBJECT_TOOL
-Resource161=IDD_SUBMAP_BKGND
-Resource162=IDD_EDIT_RULE_COMMENT
-Resource163=IDD_SELECT_EVENT
-Resource164=IDD_EDIT_VARIABLE
-Resource165=IDD_MANAGE_GRAPHS
-Resource166=IDD_EDIT_RULE_ALARM
-Resource167=IDA_OBJECT_TOOLS_EDITOR
-Resource168=IDA_LAST_VALUES
-Resource169=IDD_SELECT_ACTION
-Resource170=IDD_DISCOVERY_TARGETS
-Resource171=IDD_MIB_BROWSER
+Resource140=IDD_SET_CHILD_MGMT_STATUS
+Resource141=IDD_OBJTOOL_OPTIONS
+Resource142=IDD_SNMP_WALK
+Resource143=IDD_CREATE_TEMPLATE
+Resource144=IDD_EDIT_TRAP
+Resource145=IDA_AGENT_CONFIG_MANAGER
+Resource146=IDD_CREATE_CLUSTER
+Resource147=IDA_LAST_VALUES
+Resource148=IDD_CREATE_NODE
+Resource149=IDD_OBJTOOL_COLUMNS
+Resource150=IDD_DISCOVERY_TARGETS
+Resource151=IDD_UPGRADE
+Resource152=IDA_DATA_VIEW
+Resource153=IDA_SERVER_CFG_EDITOR
+Resource154=IDA_MDI_DEFAULT
+Resource155=IDD_DEFINE_GRAPH
+Resource156=IDD_CHANGE_PASSWORD
+Resource157=IDR_MAINFRAME
+Resource158=IDD_DCI_COLLECTION
+Resource159=IDA_ACTION_EDITOR
+Resource160=IDD_CREATE_CONDITION
+Resource161=IDD_AGENT_CONFIG
+Resource162=IDD_SELECT_ACTION
+Resource163=IDD_CREATE_CONTAINER
+Resource164=IDD_NEW_OBJECT_TOOL
+Resource165=IDA_ALARM_BROWSER
+Resource166=IDD_CREATE_TG
+Resource167=IDD_OBJECT_NODE_GENERAL
+Resource168=IDA_OBJECT_COMMENTS
+Resource169=IDD_EDIT_TRAP_ARG
+Resource170=IDD_OBJECT_CLUSTER_GENERAL
+Resource171=IDD_NEW_ACTION
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_ADDR_ENTRY
-Resource173=IDA_DATA_VIEW
+Resource172=IDD_CLUSTER_RESOURCE
+Resource173=IDD_REQUEST_PROCESSING
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDD_DISCOVERY_RANGES
+Resource174=IDD_OBJECT_CLUSTER_RESOURCES
 Class127=CAddDCIDlg
-Resource175=IDD_OBJECT_GENERAL
+Resource175=IDD_DCI_THRESHOLDS
 Class128=CCondDCIPropDlg
-Resource176=IDD_OBJECT_COND_DATA
+Resource176=IDD_ADDR_ENTRY
 Class129=CAgentConfigMgr
-Resource177=IDD_EDIT_TRAP
-Resource178=IDD_OBJECT_COND_SCRIPT
+Resource177=IDD_OBJECT_RELATIONS
+Resource178=IDD_DISCOVERY_RANGES
 Class130=CAgentCfgDlg
 Class131=CObjectCommentsEditor
-Resource179=IDD_SELECT_TRAP
+Resource179=IDD_MANAGE_GRAPHS
 Class132=CRuleScriptDlg
 Class133=CDetailsView
-Resource180=IDD_CREATE_CLUSTER
+Resource180=IDD_IMPORT_CA_CERT
 Class134=CDiscoveryPropGeneral
-Resource181=IDD_NEW_ACTION
+Resource181=IDD_DATA_QUERY
 Class135=CDiscoveryPropTargets
-Resource182=IDD_GRAPH_PROP_SETTINGS
+Resource182=IDD_SAVE_AGENT_CFG
 Class136=CDiscoveryPropAddrList
-Resource183=IDA_SERVER_CFG_EDITOR
+Resource183=IDA_CERT_MANAGER
 Class138=CObjectView
 Class139=CObjectOverview
 Class140=CAlarmView
 Class141=CObjectDepView
-Resource184=IDD_DEFINE_GRAPH
+Resource184=IDA_EPP
 Class137=CObjectBrowser
 Class142=CCreateMPDlg
-Resource185=IDD_COND_DCI_PROP
+Resource185=IDD_SELECT_MP
 Class143=CSelectMPDlg
-Resource186=IDD_SELECT_USER
+Resource186=IDD_MIB_BROWSER
 Class144=CTrapSelDlg
-Resource187=IDD_OBJECT_NODE_GENERAL
+Resource187=IDD_GROUP_PROPERTIES
 Class145=CConsoleUpgradeDlg
-Resource188=IDA_EVENT_EDITOR
+Resource188=IDA_DC_EDITOR
 Class146=CCreateClusterDlg
-Resource189=IDD_CREATE_NODE
+Resource189=IDD_SELECT_AGENT_PARAM
 Class147=CClusterPropsGeneral
-Resource190=IDD_CREATE_TEMPLATE
+Resource190=IDD_OBJECT_NETSRV_GENERAL
 Class148=CClusterPropsResources
-Resource191=IDD_OBJECT_VPNC_GENERAL
+Resource191=IDD_CHANGE_IP
 Class149=CClusterResDlg
-Resource192=IDD_SELECT_INTERNAL_ITEM
+Resource192=IDD_GRAPH_PROP_SETTINGS
 Class150=CClusterView
 Class151=CExtEditCtrl
-Resource193=IDR_MAINFRAME
+Resource193=IDA_TRAP_EDITOR
 Class152=CFatalErrorDlg
-Resource194=IDD_OBJECT_NODE_POLL
+Resource194=IDD_CREATE_VPNC
 Class153=CDefineGraphDlg
-Resource195=IDA_TRAP_EDITOR
+Resource195=IDA_SCRIPT_MANAGER
 Class154=CGraphManagerDlg
-Resource196=IDA_MDI_DEFAULT
+Resource196=IDA_GRAPH
 Class155=CGraphStylePage
 Class156=CNodePerfView
 Class157=CCertManager
-Resource197=IDD_AGENT_CONFIG
+Resource197=IDD_SELECT_TRAP
 Class158=CImportCertDlg
-Resource198=IDD_OBJECT_SECURITY
+Resource198=IDD_THRESHOLD
 Class159=CNodeTopologyView
 Class160=CObjectStatusBar
 Class161=CObjectTree
-Resource199=IDD_LASTVAL_PROP
+Resource199=IDD_OBJECT_STATUS
 Class162=CChildMgmtStatusDlg
-Resource200=IDD_SELECT_OBJECT
+Resource200=IDD_ACTION_PROPERTIES
 Class163=CCreateIfDCIDlg
 Class164=CNodeLastValuesView
 Resource201=IDD_CREATE_IF_DCI
@@ -1872,7 +1872,10 @@ Command187=ID_STATUS_HIDEUNMANAGED
 Command188=ID_STATUS_HIDEUNKNOWN
 Command189=ID_STATUS_HIDENONOPERATIONAL
 Command190=ID_STATUS_ICONS
-CommandCount=190
+Command191=ID_ITEM_SHOWDATA
+Command192=ID_ITEM_GRAPH
+Command193=ID_ITEM_EXPORTDATA
+CommandCount=193
 
 [MNU:IDM_CONTEXT (English (U.S.))]
 Type=1
